--- a/index.html
+++ b/index.html
@@ -2,89 +2,54 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"
+    />
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <title>Project</title>
   </head>
   <body>
     <section>
-      <img
-        class="hero"
-        src="https://github.com/ecemgo/mini-samples-great-tricks/assets/13468728/c62efd51-f844-4335-ba29-70ea35521dd8"
-        alt=""
-      />
+      <img class="hero" src="images/hero.png" alt="" />
       <div class="swiper">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
             <h1 class="title one">Edinburgh</h1>
-            <img
-              src="https://github.com/ecemgo/mini-samples-great-tricks/assets/13468728/1bdebd02-d675-4469-be36-dc248448980d"
-              alt=""
-            />
+            <img src="images/edinburgh.png" alt="" />
           </div>
 
           <div class="swiper-slide">
             <h1 class="title two">Stockholm</h1>
-            <img
-              src="https://github.com/ecemgo/mini-samples-great-tricks/assets/13468728/62411bbf-dde9-4654-9298-1fe3e7da2d64"
-              alt=""
-            />
+            <img src="images/stockholm.png" alt="" />
           </div>
 
           <div class="swiper-slide">
             <h1 class="title three">Paris</h1>
-            <img
-              src="https://github.com/ecemgo/mini-samples-great-tricks/assets/13468728/b49c729f-65b0-4a2a-baf7-1d9f180df0a6"
-              alt=""
-            />
+            <img src="images/paris.png" alt="" />
           </div>
 
           <div class="swiper-slide">
             <h1 class="title four">Brugge</h1>
-            <img
-              src="https://github.com/ecemgo/mini-samples-great-tricks/assets/13468728/c9a61071-c74d-4e8b-966a-6948cdbd9665"
-              alt=""
-            />
+            <img src="images/brugge.png" alt="" />
           </div>
 
           <div class="swiper-slide">
             <h1 class="title five">Bavaria</h1>
-            <img
-              src="https://github.com/ecemgo/mini-samples-great-tricks/assets/13468728/25ab6cb7-9251-4aa5-9993-32ebd8542616"
-              alt=""
-            />
+            <img src="images/bavaria.png" alt="" />
           </div>
 
           <div class="swiper-slide">
             <h1 class="title six">Copenhagen</h1>
-            <img
-              src="https://github.com/ecemgo/mini-samples-great-tricks/assets/13468728/365656bc-24bc-4d95-92da-7f34faa616cf"
-              alt=""
-            />
+            <img src="images/copenhagen1.png" alt="" />
           </div>
         </div>
       </div>
     </section>
-    <!-- <script src="script.js"></script> -->
 
-    <script type="module">
-      import Swiper from "https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.mjs";
-
-      const swiper = new Swiper(".swiper", {
-        grabCursor: true,
-
-        speed: 500,
-        effect: "slide",
-        loop: true,
-        // oneWayMovement: true,
-        parallax: true,
-        mousewheel: {
-          invert: true,
-          sensitivity: 1,
-        },
-      });
-      swiper.enable();
-      swiper.slideNext();
-    </script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
