--- a/index.html
+++ b/index.html
@@ -17,33 +17,41 @@
       <div class="swiper">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
-            <h1 class="title one">Edinburgh</h1>
-            <img src="images/edinburgh.png" alt="" />
+            <h1 class="title one">Mysore</h1>
+            <!-- <h1 class="title one">Edinburgh</h1> -->
+            <img src="images/mysore.png" alt="" />
+            <!-- <img src="images/edinburgh.png" alt="" /> -->
           </div>
 
           <div class="swiper-slide">
-            <h1 class="title two">Stockholm</h1>
-            <img src="images/stockholm.png" alt="" />
+            <h1 class="title two">Chennai</h1>
+            <img src="images/Chennai.png" alt="" />
+            <!-- <h1 class="title two">Stockholm</h1>
+            <img src="images/stockholm.png" alt="" /> -->
           </div>
 
           <div class="swiper-slide">
-            <h1 class="title three">Paris</h1>
-            <img src="images/paris.png" alt="" />
+            <h1 class="title three">Culcutta</h1>
+            <img src="images/Culcutta.png" alt="" />
+            <!-- <h1 class="title three">Paris</h1>
+            <img src="images/paris.png" alt="" /> -->
           </div>
 
           <div class="swiper-slide">
-            <h1 class="title four">Brugge</h1>
-            <img src="images/brugge.png" alt="" />
+            <h1 class="title four">Delhi</h1>
+            <img src="images/Delhi.png" alt="" />
+            <!-- <h1 class="title four">Brugge</h1>
+            <img src="images/brugge.png" alt="" /> -->
           </div>
 
           <div class="swiper-slide">
-            <h1 class="title five">Bavaria</h1>
-            <img src="images/bavaria.png" alt="" />
+            <h1 class="title five">Punjab</h1>
+            <img src="images/GoldenTemple.png" alt="" />
           </div>
 
           <div class="swiper-slide">
-            <h1 class="title six">Copenhagen</h1>
-            <img src="images/copenhagen1.png" alt="" />
+            <h1 class="title six">Mumbai</h1>
+            <img src="images/Mumbai.png" alt="" />
           </div>
         </div>
       </div>
