--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Project</title>
+    <title>BackGround Slider</title>
   </head>
   <body>
     <section>
